fixed last track being cut off on mobile

--- a/source/css/main.css.sass
+++ b/source/css/main.css.sass
@@ -179,6 +179,7 @@ footer
 
     .main__tracklist
       margin-top: 20px
+      margin-bottom: 90px
       width: 54.5%
       ol
         margin-top: 0
